# tiny

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml  wsgi.py
migrations/versions/: 9285a557077a_initial_schema.py  a1b2c3d4e5f6_add_page_layout_post_fields.py
tests/: conftest.py  fake_llm.py  test_agent.py  test_chat.py  test_create_site.py  test_env_loading.py  test_landing.py  test_llm.py  test_site_render.py  test_studio.py  test_studio_page_crud.py
tiny/: agent.py  app.py  llm.py  models.py
tiny/static/css/: base.css  studio.css
tiny/templates/: landing.html  site.html  studio.html
