[project]
name = "tiny"
version = "0.0.1"
description = "Chat-driven small website builder"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "psycopg[binary]>=3.1",
    "markdown>=3.6",
    "anthropic>=0.40",
    "python-slugify>=8.0",
    "gunicorn>=22.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]
